fix response from super admin,production, tu and customer service
